Added menu item 'Week 9'.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -248,6 +248,9 @@
           <li class="nav-item">
             <a class="nav-link {% if page.title == "Week 8" %} active{% endif %}" href="week8">Week 8</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link {% if page.title == "Week 9" %} active{% endif %}" href="week9">Week 9</a>
+          </li>
         </ul>
       <div class="container">
       {{ content }}
